<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="arguments">Arguments to send</string>
    <string name="search">Send</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="male">Male</string>
    <string name="height">Height</string>
    <string name="searching">검색 중입니다...</string>
    <string name="cancel">취소</string>
</resources>